--- a/schoolclubfrontend/index.html
+++ b/schoolclubfrontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.ico"><link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
 <!--      https://itbaima.net/static/image/background/light/1.webp  -->
